#==============================================================================
#cmake 版本
#==============================================================================
cmake_minimum_required(VERSION 2.8)

#==============================================================================
#项目logic name
#==============================================================================
project(leetcode)

#==============================================================================
#设置一些通用变量值，指定所有目录放于一个目录
#==============================================================================
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY         "${CMAKE_BINARY_DIR}/")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY         "${CMAKE_BINARY_DIR}/")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY         "${CMAKE_BINARY_DIR}/")

#==============================================================================
#处理构建类型
#==============================================================================
if(NOT CMAKE_BUILD_TYPE)
	set(CMAKE_BUILD_TYPE Debug)
endif()

#==============================================================================
#编译选项
#==============================================================================
set(CMAKE_C_COMPILER clang)
set(CMAKE_CXX_COMPILER clang++)
set(WARNING_FLAGS           "-Weverything -Wno-c++98-compat")
set(COMPILE_FLAGS           "-std=c++11")
set(DEBUG_FLAGS             "-DDEBUG -g3 -O0")
set(RELEASE_FLAGS           "-DNDEBUG -O3")
set(CMAKE_CXX_FLAGS_DEBUG   "${WARNING_FLAGS} ${COMPILE_FLAGS} ${DEBUG_FLAGS}")
set(CMAKE_CXX_FLAGS_RELEASE "${WARNING_FLAGS} ${COMPILE_FLAGS} ${RELEASE_FLAGS}")

#==============================================================================
# really start ...
#==============================================================================
add_executable(reverse_linked_list reverse_linked_list.cpp)
add_executable(isomorphic isomorphic.cpp)
add_executable(count_primes count_primes.cpp)
add_executable(remove_linked_list_elements remove_linked_list_elements.cpp)
add_executable(trie_prefix_tree trie_prefix_tree.cpp)
add_executable(happy_number happy_number.cpp)
add_executable(range_bitwise_and range_bitwise_and.cpp)
add_executable(bit_operation bit_operation.cpp)
add_executable(number_of_land number_of_land.cpp)
add_executable(binary_right_side_view binary_right_side_view.cpp)
add_executable(house_robber house_robber.cpp)
add_executable(number_of_1_bits number_of_1_bits.cpp)
add_executable(reverse_bits reverse_bits.cpp)
add_executable(rotate_array rotate_array.cpp)
add_executable(best_time_to_buy_and_sell_stock best_time_to_buy_and_sell_stock.cpp)
add_executable(best_time_to_buy_and_sell_stock_2 best_time_to_buy_and_sell_stock_2.cpp)
add_executable(best_time_to_buy_and_sell_stock_3 best_time_to_buy_and_sell_stock_3.cpp)
add_executable(best_time_to_buy_and_sell_stock_4 best_time_to_buy_and_sell_stock_4.cpp)
add_executable(repeated_dns_sequences repeated_dns_sequences.cpp)
add_executable(largest_number largest_number.cpp)
add_executable(dungeon_game dungeon_game.cpp)
add_executable(binary_search_tree_iterator binary_search_tree_iterator.cpp)
add_executable(factorial_trailing_zeroes factorial_trailing_zeroes.cpp)
add_executable(excel_sheet_column_cumber excel_sheet_column_cumber.cpp)
add_executable(majority_element majority_element.cpp)
add_executable(excel_sheet_solumn_title excel_sheet_solumn_title.cpp)
add_executable(fraction_to_recurring_decimal fraction_to_recurring_decimal.cpp)
add_executable(compare_version_numbers compare_version_numbers.cpp)
add_executable(maximum_gap maximum_gap.cpp)
add_executable(find_peak_element find_peak_element.cpp)
add_executable(intersection_of_two_linked_lists intersection_of_two_linked_lists.cpp)
add_executable(min_stack min_stack.cpp)
add_executable(find_minimum_in_rotated_sorted_array find_minimum_in_rotated_sorted_array.cpp)
add_executable(find_minimum_in_rotated_sorted_array_2 find_minimum_in_rotated_sorted_array_2.cpp)
add_executable(maximum_product_subarray maximum_product_subarray.cpp)
add_executable(reverse_words_in_a_string reverse_words_in_a_string.cpp)
add_executable(evaluate_reverse_polish_notation evaluate_reverse_polish_notation.cpp)
add_executable(max_points_on_a_line max_points_on_a_line.cpp)
add_executable(sort_list sort_list.cpp)
add_executable(insertion_sort_list insertion_sort_list.cpp)
add_executable(lru_cache lru_cache.cpp)
add_executable(binary_tree_postorder_traversal binary_tree_postorder_traversal.cpp)
add_executable(binary_tree_preorder_traversal binary_tree_preorder_traversal.cpp)
add_executable(reorder_list reorder_list.cpp)
add_executable(linked_list_cycle linked_list_cycle.cpp)
add_executable(linked_list_cycle_2 linked_list_cycle_2.cpp)
add_executable(word_break word_break.cpp)
add_executable(word_break_2 word_break_2.cpp)
add_executable(copy_list_with_random_pointer copy_list_with_random_pointer.cpp)
add_executable(single_number single_number.cpp)
add_executable(single_number_2 single_number_2.cpp)
add_executable(candy candy.cpp)
add_executable(gas_station gas_station.cpp)
add_executable(clone_graph clone_graph.cpp)
add_executable(palindrome_partitioning palindrome_partitioning.cpp)
add_executable(palindrome_partitioning_2 palindrome_partitioning_2.cpp)
add_executable(surrounded_regions surrounded_regions.cpp)
add_executable(longest_consecutive_sequence longest_consecutive_sequence.cpp)
add_executable(sum_root_to_leaf_numbers sum_root_to_leaf_numbers.cpp)
add_executable(word_ladder word_ladder.cpp)
add_executable(word_ladder_2 word_ladder_2.cpp)
add_executable(valid_palindrome valid_palindrome.cpp)
add_executable(binary_tree_maximum_path_sum binary_tree_maximum_path_sum.cpp)
add_executable(triangle triangle.cpp)
add_executable(pascal_triangle pascal_triangle.cpp)
add_executable(pascal_triangle_2 pascal_triangle_2.cpp)
add_executable(populating_next_right_pointers_in_each_node populating_next_right_pointers_in_each_node.cpp)
add_executable(populating_next_right_pointers_in_each_node_2 populating_next_right_pointers_in_each_node_2.cpp)
add_executable(distinct_subsequences distinct_subsequences.cpp)
add_executable(flatten_binary_tree_to_linked_list flatten_binary_tree_to_linked_list.cpp)
add_executable(path_sum path_sum.cpp)
add_executable(path_sum_2 path_sum_2.cpp)
add_executable(minimum_depth_of_binary_tree minimum_depth_of_binary_tree.cpp)
add_executable(balanced_binary_tree balanced_binary_tree.cpp)
add_executable(convert_sorted_list_to_binary_search_tree convert_sorted_list_to_binary_search_tree.cpp)
add_executable(sorted_array_to_binary_search_tree sorted_array_to_binary_search_tree.cpp)
add_executable(binary_tree_level_order_traversal_2 binary_tree_level_order_traversal_2.cpp)
add_executable(construct_binary_tree_from_inorder_and_postorder_traversal construct_binary_tree_from_inorder_and_postorder_traversal.cpp)
add_executable(construct_binary_tree_from_preorder_and_inorder_Traversal construct_binary_tree_from_preorder_and_inorder_Traversal.cpp)
add_executable(maximum_depth_of_binary_tree maximum_depth_of_binary_tree.cpp)
add_executable(binary_tree_zigzag_level_order_traversal binary_tree_zigzag_level_order_traversal.cpp)
add_executable(recovery_binary_search_tree recovery_binary_search_tree.cpp)
add_executable(binary_tree_level_order_traversal binary_tree_level_order_traversal.cpp)
add_executable(symmetric_tree symmetric_tree.cpp)
add_executable(same_tree same_tree.cpp)
add_executable(validate_binary_search_tree validate_binary_search_tree.cpp)
add_executable(interleaving_string interleaving_string.cpp)
add_executable(unique_binary_search_trees unique_binary_search_trees.cpp)
add_executable(unique_binary_search_trees_2 unique_binary_search_trees_2.cpp)
add_executable(binary_tree_inorder_traversal binary_tree_inorder_traversal.cpp)
add_executable(scramble_string scramble_string.cpp)
add_executable(restore_ip_addresses restore_ip_addresses.cpp)
add_executable(reverse_linked_list_2 reverse_linked_list_2.cpp)
add_executable(decode_ways decode_ways.cpp)
add_executable(merge_sorted_array merge_sorted_array.cpp)
add_executable(gray_code gray_code.cpp)
add_executable(subsets subsets.cpp)
add_executable(subsets_2 subsets_2.cpp)
add_executable(partition_list partition_list.cpp)
add_executable(maximal_rectangle maximal_rectangle.cpp)
add_executable(largest_rectangle_in_histogram largest_rectangle_in_histogram.cpp)
add_executable(remove_duplicates_from_sorted_list remove_duplicates_from_sorted_list.cpp)
add_executable(remove_duplicates_from_sorted_list_2 remove_duplicates_from_sorted_list_2.cpp)
add_executable(remove_duplicates_from_sorted_array remove_duplicates_from_sorted_array.cpp)
add_executable(remove_duplicates_from_sorted_array_2 remove_duplicates_from_sorted_array_2.cpp)
add_executable(search_in_rotated_sorted_array search_in_rotated_sorted_array.cpp)
add_executable(search_in_rotated_sorted_array_2 search_in_rotated_sorted_array_2.cpp)
add_executable(word_search word_search.cpp)
add_executable(combinations combinations.cpp)
add_executable(minimum_window_substring minimum_window_substring.cpp)
add_executable(minimum_path_sum minimum_path_sum.cpp)
add_executable(unique_paths unique_paths.cpp)
add_executable(unique_paths_2 unique_paths_2.cpp)
add_executable(sort_colors sort_colors.cpp)
add_executable(search_a_2D_Matrix search_a_2D_Matrix.cpp)
add_executable(set_matrix_zeroes set_matrix_zeroes.cpp)
add_executable(simplify_path simplify_path.cpp)
add_executable(climbing_stairs climbing_stairs.cpp)
add_executable(sqrt sqrt.cpp)
add_executable(add_binary add_binary.cpp)
add_executable(plus_one plus_one.cpp)
add_executable(rotate_list rotate_list.cpp)
add_executable(permutation_sequence permutation_sequence.cpp)
add_executable(permutations permutations.cpp)
add_executable(next_permutation next_permutation.cpp)
add_executable(permutations_2 permutations_2.cpp)
add_executable(spiral_matrix spiral_matrix.cpp)
add_executable(spiral_matrix_2 spiral_matrix_2.cpp)
add_executable(length_of_last_word length_of_last_word.cpp)
add_executable(insert_interval insert_interval.cpp)
add_executable(merge_intervals merge_intervals.cpp)
add_executable(maximum_subarray maximum_subarray.cpp)
add_executable(jump_game jump_game.cpp)
add_executable(jump_game_2 jump_game_2.cpp)
add_executable(pow_x_n pow_x_n.cpp)
add_executable(anagrams anagrams.cpp)
add_executable(rotate_image rotate_image.cpp)
add_executable(wildcard_matching wildcard_matching.cpp)
add_executable(n_queens n_queens.cpp)
add_executable(n_queens_2 n_queens_2.cpp)
add_executable(multiply_strings multiply_strings.cpp)
add_executable(trapping_rain_water trapping_rain_water.cpp)
add_executable(first_missing_positive first_missing_positive.cpp)
add_executable(combination_sum combination_sum.cpp)
add_executable(combination_sum_2 combination_sum_2.cpp)
add_executable(count_and_say count_and_say.cpp)
add_executable(valid_sudoku valid_sudoku.cpp)
add_executable(sudoku_solver sudoku_solver.cpp)
add_executable(search_insert_position search_insert_position.cpp)
add_executable(search_for_a_range search_for_a_range.cpp)
add_executable(longest_valid_parentheses longest_valid_parentheses.cpp)
add_executable(substring_with_concatenation_of_all_words substring_with_concatenation_of_all_words.cpp)
add_executable(divide_two_integers divide_two_integers.cpp)
add_executable(strstr strstr.cpp)
add_executable(remove_element remove_element.cpp)
add_executable(reverse_nodes_in_k_group reverse_nodes_in_k_group.cpp)
add_executable(swap_nodes_in_pairs swap_nodes_in_pairs.cpp)
add_executable(merge_k_sorted_lists merge_k_sorted_lists.cpp)
add_executable(generate_parentheses generate_parentheses.cpp)
add_executable(merge_two_sorted_lists merge_two_sorted_lists.cpp)
add_executable(valid_parentheses valid_parentheses.cpp)
add_executable(remove_nth_node_from_end_of_list remove_nth_node_from_end_of_list.cpp)
add_executable(two_sum two_sum.cpp)
add_executable(3_sum 3_sum.cpp)
add_executable(4_sum 4_sum.cpp)
add_executable(3_sum_closest 3_sum_closest.cpp)
add_executable(letter_combinations_of_a_phone_number letter_combinations_of_a_phone_number.cpp)
add_executable(longest_common_prefix longest_common_prefix.cpp)
add_executable(roman_to_integer roman_to_integer.cpp)
add_executable(integer_to_roman integer_to_roman.cpp)
add_executable(container_with_most_water container_with_most_water.cpp)
add_executable(regular_expression_matching regular_expression_matching.cpp)
add_executable(palindrome_number palindrome_number.cpp)
add_executable(zig_zag_conversion zig_zag_conversion.cpp)
add_executable(string_to_integer_atoi string_to_integer_atoi.cpp)
add_executable(longest_palindromic_substring longest_palindromic_substring.cpp)
add_executable(median_of_two_sorted_arrays median_of_two_sorted_arrays.cpp)
add_executable(add_two_numbers add_two_numbers.cpp)
add_executable(longest_substring_without_repeating_characters longest_substring_without_repeating_characters.cpp)
add_executable(lowest_common_ancestor_of_a_binary_search_tree lowest_common_ancestor_of_a_binary_search_tree.cpp)
add_executable(palindrome_linked_list palindrome_linked_list.cpp)
add_executable(number_of_digit_one number_of_digit_one.cpp)
add_executable(lowest_common_ancestor_of_a_binary_tree lowest_common_ancestor_of_a_binary_tree.cpp)
add_executable(implement_queue_using_stacks implement_queue_using_stacks.cpp)
add_executable(pow_of_two pow_of_two.cpp)
add_executable(kth_smallest_element_in_a_bst kth_smallest_element_in_a_bst.cpp)
add_executable(basic_calculator basic_calculator.cpp)
add_executable(basic_calculator_2 basic_calculator_2.cpp)
add_executable(summary_ranges summary_ranges.cpp)
add_executable(invert_binary_tree invert_binary_tree.cpp)
add_executable(implement_stack_using_queues implement_stack_using_queues.cpp)
add_executable(rectangle_area rectangle_area.cpp)
add_executable(count_complete_tree_nodes count_complete_tree_nodes.cpp)

